--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <h4 class="text-center" style="color: rgb(255,255,255);">Deulex Hotels</h4>
             </div>
         </div>
-        <h2 class="display-1 text-center" style="margin-top: 52px;margin-left: 34px;font-family: 'Open Sans', sans-serif;font-size: 29px;font-weight: 800;line-height: 32px;color: rgb(255,255,255);padding-bottom: 35px;">Transportation</h2>
+        <h2 class="display-1 text-center" style="margin-top: 52px;margin-left: 34px;font-family: 'Open Sans', sans-serif;font-size: 29px;font-weight: 800;line-height: 32px;color: rgb(255,255,255);padding-bottom: 35px;">Safari By</h2>
         <div class="card-group">
             <div class="card" style="background: rgba(14,14,14,0);"><img class="card-img-top w-100 d-block" data-bss-hover-animate="pulse" src="assets/img/canter.jpg" style="border-radius: 16px;">
                 <h4 class="text-center" style="color: rgb(255,255,255);">canter</h4>
