--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <h4 class="text-center" style="color: rgb(255,255,255);">Luxary hotels</h4>
             </div>
             <div class="card" style="color: rgb(0,0,0);background: rgb(0,0,0);"><img class="card-img-top w-100 d-block" data-bss-hover-animate="pulse" src="assets/img/hotel-in-rajasthan.jpg" style="border-radius: 16px;">
-                <h4 class="text-center" style="color: rgb(255,255,255);">Deulex Hotels</h4>
+                <h4 class="text-center" style="color: rgb(255,255,255);">Deluxe Hotels</h4>
             </div>
         </div>
         <h2 class="display-1 text-center" style="margin-top: 52px;margin-left: 34px;font-family: 'Open Sans', sans-serif;font-size: 29px;font-weight: 800;line-height: 32px;color: rgb(255,255,255);padding-bottom: 35px;">Safari By</h2>
