--- a/index.html
+++ b/index.html
@@ -156,13 +156,15 @@
                 <h4 class="text-center" style="color: rgb(255,255,255);">Deluxe Hotels</h4>
             </div>
         </div>
-        <h2 class="display-1 text-center" style="margin-top: 52px;margin-left: 34px;font-family: 'Open Sans', sans-serif;font-size: 29px;font-weight: 800;line-height: 32px;color: rgb(255,255,255);padding-bottom: 35px;">Safari By</h2>
+        <h2 class="display-1 text-center" style="margin-top: 52px;margin-left: 34px;font-family: 'Open Sans', sans-serif;font-size: 29px;font-weight: 800;line-height: 32px;color: rgb(255,255,255);padding-bottom: 10px;">Safari By</h2>
         <div class="card-group">
             <div class="card" style="background: rgba(14,14,14,0);"><img class="card-img-top w-100 d-block" data-bss-hover-animate="pulse" src="assets/img/canter.jpg" style="border-radius: 16px;">
-                <h4 class="text-center" style="color: rgb(255,255,255);">canter</h4>
+                <h4 class="text-center" style="color: rgb(255,255,255);margin-bottom: 6px;">canter</h4>
+                <p class="text-center">canter is one of the famous vehicle type available for max. 20 person for safari. It can visit in all zone except Zone 7 & Zone 8.</p>
             </div>
             <div class="card" style="background: rgba(0,0,0,0);"><img class="card-img-top w-100 d-block" data-bss-hover-animate="pulse" src="assets/img/gypsy.jpg" style="min-width: 0px;border-radius: 16px;">
-                <h4 class="text-center" style="color: rgb(255,255,255);">Gypsy</h4>
+                <h4 class="text-center" style="color: rgb(255,255,255);margin-bottom: 6px;">Gypsy</h4>
+                <p class="text-center">Most popular safari vehicle type in ranthambore. It is open Jeep Type vehicle available for max. 6 person for safari. It can visit in all zone from 1 to 10.</p>
             </div>
         </div>
     </div>
