--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
             </div>
         </div>
         <h2 class="display-1 text-center" style="margin-top: 52px;margin-left: 34px;font-family: 'Open Sans', sans-serif;font-size: 29px;font-weight: 800;line-height: 32px;color: rgb(255,255,255);padding-bottom: 10px;">Safari By</h2>
-        <p class="left"> There are two types of vehcile type available in ranthambore which can visit accross all safari zones from 1 to 10. One is Gypsy which is popular vehicle type, other is canter which is open bus type vehicle. There are many safari options which you can find below..<br/> </p>
-<p align="left" class="text-center">Advance Safari Booking<br/> 
+        <p class="text-justify"> There are two types of vehcile type available in ranthambore which can visit accross all safari zones from 1 to 10. One is Gypsy which is popular vehicle type, other is canter which is open bus type vehicle. There are many safari options which you can find below..<br/> </p>
+<p class="text-justify" text-align="center" >Advance Safari Booking<br/> 
 Current Safari Booking<br/> 
 Tatkal Safari Booking<br/> 
 Half/Full Day Safari Booking</p>
