--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - RanthamboreTravels - Undiscovered Wild &amp; Nature</title>
+    <title>Ranthambore Travels - Undiscovered Wild &amp; Nature</title>
     <meta property="Keywords" content="ranthambore safari timing,ranthambore safari package,safari booking officesafari booking online,ranthambore safari costs">
     <meta property="og:image" content="https://ranthamboretravels.com/assets/img/kisspng-tiger-mascot-5af4168f299305.3318969915259459991703.png">
     <meta name="description" content="Discover the majestic Ranthambore Nation Tiger life safari with us.  We provide all type of services related to safari and logging. Contact and book and your gypsy or canter now">
@@ -147,10 +147,10 @@
         <h2 class="display-1 text-center" style="margin-top: 52px;margin-left: 34px;font-family: 'Open Sans', sans-serif;font-size: 29px;font-weight: 800;line-height: 32px;color: rgb(255,255,255);padding-bottom: 35px;">Hotels</h2>
         <div class="card-group">
             <div class="card" style="background: rgba(255,255,255,0);"><img class="card-img-top w-100 d-block" data-bss-hover-animate="pulse" src="assets/img/lux.jpg" style="border-width: 13px;border-style: none;border-radius: 16px;">
-                <h4 class="text-center" style="color: rgb(255,255,255);">luxary tent</h4>
+                <h4 class="text-center" style="color: rgb(255,255,255);">Luxury tent</h4>
             </div>
             <div class="card" style="background: rgba(0,0,0,0);"><img class="card-img-top w-100 d-block d-xl-flex align-items-center align-self-center m-auto justify-content-xl-center align-items-xl-center" data-bss-hover-animate="pulse" src="assets/img/Tempclipboard-image.png" style="height: auto;color: rgb(255, 255, 255);border-radius: 16px;">
-                <h4 class="text-center" style="color: rgb(255,255,255);">Luxary hotels</h4>
+                <h4 class="text-center" style="color: rgb(255,255,255);">Luxury hotels</h4>
             </div>
             <div class="card" style="color: rgb(0,0,0);background: rgb(0,0,0);"><img class="card-img-top w-100 d-block" data-bss-hover-animate="pulse" src="assets/img/hotel-in-rajasthan.jpg" style="border-radius: 16px;">
                 <h4 class="text-center" style="color: rgb(255,255,255);">Deluxe Hotels</h4>
@@ -280,7 +280,7 @@ Half/Full Day Safari Booking</p>
                 <div>
                     <!--Comment-->
                     <h2 class="rig-h2" style="background: linear-gradient(-68deg, rgb(35,31,32), rgb(255,210,1) 91%);border-radius: 24px;border-style: none;padding-top: 0px;">Experience epicness</h2>
-                    <p class="rig-p" style="background: rgba(0,0,0,0.87);border-radius: 19px;">Relive Grandeur and meet the royals of jungle!!!</p>
+                    <p class="rig-p" style="background: rgba(0,0,0,0.87);border-radius: 19px;">Relive Grandeur and meet the royals of Jungle!!!</p>
                     <div class="rig-row">
                         <!--Comment-->
                         <div class="rig-column"><img data-bss-hover-animate="pulse" src="assets/img/tiger11.jpg"><img data-bss-hover-animate="pulse" src="assets/img/tiger7.jpg"><img data-bss-hover-animate="pulse" src="assets/img/tiger16.jpg">
