--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Discover the majestic Ranthambore Nation Tiger life safari with us.  We provide all type of services related to safari and logging. Contact and book and your gypsy or canter now">
     <meta property="description" content="Discover the majestic Ranthambore Nation Tiger life safari with us. Undiscover Wild &amp; Nature and vouch for adventure never seen before. We provide all type of services related to safari and and logging. ">
     <meta property="og:type" content="website">
+    <meta name="google-site-verification" content="xYxNNAiJvJxI4fyeO1hJvb9-pl4IycDvYQPGxrHPpyo" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="180x180" href="assets/img/apple-icon-180x180.png">
