--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ Half/Full Day Safari Booking</p>
                         <!--Comment-->
                         <div class="rig-column"><img data-bss-hover-animate="pulse" src="assets/img/tiger11.jpg"><img data-bss-hover-animate="pulse" src="assets/img/tiger7.jpg"><img data-bss-hover-animate="pulse" src="assets/img/tiger16.jpg">
                             <nav class="navbar navbar-light navbar-expand-md fixed-top" id="mainNav">
-                                <div class="container">d
+                                <div class="container">
                                 <a class="navbar-brand text-center js-scroll-trigger" href="#" style="border-radius: 6px;padding: 4px 0px;width: 266.9px;font-size: 16px;border-width: 0px;border-style: solid;border-bottom-width: 3px;border-bottom-color: rgb(221,6,6);"><strong> UNDISCOVERED WILD &amp; NATURE </strong><br /><strong> call  +919929751793</strong><br /></a>
 
                                 <button data-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
