--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="col-lg-8 mx-auto">
                     <h2 style="background: rgba(0,0,0,0.8);color: rgb(255,255,255);padding-top: 20px;margin-bottom: 0px;">Safari</h2>
                     <p style="background: rgba(0,0,0,0.82);padding: 17px;padding-right: 26px;padding-bottom: 26px;padding-top: 2px;margin-bottom: 0px;"><br>Ranthambore national park is world famous national park famous for tiger population. In former it was forest hunting ground for old kings. Total area of ranthambore tiger reserve is 1334 square km. Only 1/4 part about 384 square km. is open for tourist and know as ranthambore national park. Ranthambore national park is devided in 10 different zones from 1 to 10 for ranthambore safari.Award Winning Tiger ReserveLarge Area 384 square km. for safariDifferent Safari zones from 1 to 10.Many Kind of Safarii<br></p>
-                    <p style="background: rgba(0,0,0,0.84);color: #f5f5f5;">We are a kota based Traveling , Tourism company<br>we provide all sort of services related to Ranthambore&nbsp;<br>tiger safari.&nbsp;</p>
+                    <p style="background: rgba(0,0,0,0.84);color: #f5f5f5;">We are a ranthambore based Traveling , Tourism company<br>we provide all sort of services related to Ranthambore&nbsp;<br>tiger safari.&nbsp;</p>
                     <div class="card"><img class="card-img w-100 d-block" src="assets/img/india-ranthambore-national-park-006.jpg"></div>
                     <h2 style="background: rgba(0,0,0,0.8);color: rgb(255,255,255);padding-top: 20px;margin-bottom: 0px;">Timings of park</h2>
                     <p style="background: rgba(0,0,0,0.84);">Ranthambore National Park Open Timing<br><br>Generally, the opening and closing time of the park is in sync with the sunrise and sunset. The park opens around half an hour after the sunrise and closes around half an hour before the sunset. As the sunrise and sunset timing changes with the change of the season, the entry and exit timing of the Ranthambore National Park changes accordingly. Below are the approved timings of safari all around the year,<br><br>There is a heavy rush on weekends and holidays so it is always advisable to book safari and hotels in advance. The morning safari usually starts half an hour after the sunrise and the afternoon safari concluded half an hour before the sunset. Thus, the timing changes accordingly with the changing of seasons. Each safari is allowed for a maximum of three and half hour of time.</p>
@@ -343,6 +343,10 @@ Half/Full Day Safari Booking</p>
                 <div><i class="fa fa-phone footer-contacts-icon"></i>
                     <p> <a href="#" target="_blank" style="border-color: rgb(255,255,255);color: rgb(255,255,255);font-family: Quicksand, sans-serif;">+91<strong>9929751793</strong><br></a></p>
                 </div>
+
+                <div><i class="fa fa-map-marker footer-contacts-icon"></i>
+    <p><a href="#" target="_blank" style="border-color: rgb(255,255,255);color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;font-size: 12px;"><strong>Next to taj </strong><br /><strong>Ranthambore Road, </strong><br /><strong>Sawaimadhopur</strong><br /></a></p>
+</div>
             </div>
             <div class="clearfix"></div>
             <div class="col-md-4 footer-about">
