--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Ranthambore Travels - Undiscovered Wild &amp; Nature</title>
-    <meta property="Keywords" content="ranthambore safari timing,ranthambore safari package,safari booking officesafari booking online,ranthambore safari costs">
+    <meta property="Keywords" content="Ranthambore safari timing,ranthambore safari package,safari booking office safari booking online,ranthambore safari costs">
     <meta property="og:image" content="https://ranthamboretravels.com/assets/img/kisspng-tiger-mascot-5af4168f299305.3318969915259459991703.png">
-    <meta name="description" content="Discover the majestic Ranthambore Nation Tiger life safari with us.  We provide all type of services related to safari and logging. Contact and book and your gypsy or canter now">
+    <meta name="description" content="Discover the majestic Ranthambore Nation Tiger life safari with us. We provide all type of services related to safari and Lodging , gypsy , canter and hotels. Contact and book now">
     <meta property="description" content="Discover the majestic Ranthambore Nation Tiger life safari with us. Undiscover Wild &amp; Nature and vouch for adventure never seen before. We provide all type of services related to safari and and logging. ">
     <meta property="og:type" content="website">
     <meta name="google-site-verification" content="xYxNNAiJvJxI4fyeO1hJvb9-pl4IycDvYQPGxrHPpyo" />
@@ -54,7 +54,7 @@
     <link rel="stylesheet" href="assets/css/WhatsApp-Button.css">
 </head>
 
-<body id="page-top"><a class="d-md-flex justify-content-md-center align-items-md-center pulse animated infinite" id="wp" target="_blank" style="width: 50px;height: 50px;margin-bottom: -29px;margin-right: -32px;"><i class="fa fa-whatsapp d-md-flex justify-content-md-center align-items-md-center"></i></a>
+<body id="page-top"><a class="d-md-flex justify-content-md-center align-items-md-center pulse animated infinite" id="wp" target="_blank" style="width: 50px;height: 50px;margin-bottom: -29px;margin-right: -32px;" href="https://wa.me/919929751793?text=Hi!%20I%20Want%20To%20Book%20Safari"><i class="fa fa-whatsapp d-md-flex justify-content-md-center align-items-md-center"></i></a>
     <header class="masthead" style="background: url(&quot;assets/img/tiger15.jpg&quot;) center / cover no-repeat;">
         <div class="intro-body" style="font-size: 15px;">
             <div class="container">
