--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ranthambore Travels - Undiscovered Wild &amp; Nature</title>
     <meta property="Keywords" content="Ranthambore safari timing,ranthambore safari package,safari booking office safari booking online,ranthambore safari costs">
     <meta property="og:image" content="https://ranthamboretravels.com/assets/img/kisspng-tiger-mascot-5af4168f299305.3318969915259459991703.png">
-    <meta name="description" content="Discover the majestic Ranthambore Nation Tiger life safari with us. We provide all type of services related to safari and Lodging , gypsy , canter and hotels. Contact and book now">
+    <meta name="description" content="Discover the majestic Ranthambore Nation Tiger life safari with us. We provide all types of services related to safari and Lodging, gypsy, canter, and hotels. Contact to Book +919929751793.">
     <meta property="description" content="Discover the majestic Ranthambore Nation Tiger life safari with us. Undiscover Wild &amp; Nature and vouch for adventure never seen before. We provide all type of services related to safari and and logging. ">
     <meta property="og:type" content="website">
     <meta name="google-site-verification" content="xYxNNAiJvJxI4fyeO1hJvb9-pl4IycDvYQPGxrHPpyo" />
